--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="../Cumulio API/packages.config" />
+  <repository path="../EmbeddedCumulio/packages.config" />
   <repository path="../SocketIO/packages.config" />
 </repositories>
